fixing bugs on mobile

--- a/styles/_menu.scss
+++ b/styles/_menu.scss
@@ -49,7 +49,7 @@ nav {
   align-items: center;
   width: 100%;
   padding: 10px 15px;
-  background-color: white;
+  background-color: #f8f8f8;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 5px 15px;
   z-index: 100;
 
@@ -189,15 +189,4 @@ nav {
   height: 100%;
   margin-bottom: 0px;
   z-index: 99;
-}
-
-@media only screen and (max-width: 800px) {
-    
-  // .nav-links {
-  //   padding: 5px;
-  //   font-size: 5px;
-  //   color: red;
-  //   background-color: red;
-  // }
-
 }
