--- a/styles/pages/_brunch.scss
+++ b/styles/pages/_brunch.scss
@@ -70,3 +70,34 @@ $header-image: "../images/brunch2.jpg";
   justify-content: flex-start;
 }
 
+.brunch__section {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  min-height: 200px;
+  
+  border-top: 2px solid black;
+  border-left: 2px solid black;
+  padding: 30px 50px;
+  background-image: linear-gradient(180deg, rgb(220, 214, 211), rgba(40, 117, 19, 0));
+  overflow: hidden;
+  z-index: 1;
+  
+  ul {
+    list-style:square inside;
+  } 
+}
+
+.brunch__left {
+  min-width: 300px;
+  top: -45px;
+  z-index: -1;
+  transform: translate(20px, 10px);
+  overflow: hidden;
+  h1 {font-size: 40px;}
+  @media screen and (max-width: 1000px) {
+    h1 {font-size: 30px;}
+  }
+}
